@@ -1,3 +1,7 @@
+<b>2010-10-24</b>
+
+* Bugfix: Banner in miles instead of kilometers (3091634)
+
 <b>2010-10-16</b>
 
 * Dates and times can now be entered without separators (3074343)
